--- a/test.html
+++ b/test.html
@@ -37,79 +37,79 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbar">
 						<ul class="nav flex-column">
-							<li class="nav-item"><a class="nav-link-cut" href="./Argentina.html"><i class="flag flag-AR"></i>Argentina</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Australia.html"><i class="flag flag-AU"></i>Australia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Austria.html"><i class="flag flag-AT"></i>Austria</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Azerbaijan.html"><i class="flag flag-AZ"></i>Azerbaijan</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Belarus.html"><i class="flag flag-BY"></i>Belarus</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Belgium.html"><i class="flag flag-BE"></i>Belgium</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Brazil.html"><i class="flag flag-BR"></i>Brazil</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Bulgaria.html"><i class="flag flag-BG"></i>Bulgaria</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Burkina_Faso.html"><i class="flag flag-BF"></i>Burkina Faso</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Canada.html"><i class="flag flag-CA"></i>Canada</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Chile.html"><i class="flag flag-CL"></i>Chile</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./China.html"><i class="flag flag-CN"></i>China</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Croatia.html"><i class="flag flag-HR"></i>Croatia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Czechia.html"><i class="flag flag-CZ"></i>Czechia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Denmark.html"><i class="flag flag-DK"></i>Denmark</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Dominican_Republic.html"><i class="flag flag-DO"></i>Dominican Republic</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Estonia.html"><i class="flag flag-EE"></i>Estonia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Finland.html"><i class="flag flag-FI"></i>Finland</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./France.html"><i class="flag flag-FR"></i>France</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Germany.html"><i class="flag flag-DE"></i>Germany</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Greece.html"><i class="flag flag-GR"></i>Greece</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Guernsey.html"><i class="flag flag-GG"></i>Guernsey</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Hong_Kong.html"><i class="flag flag-HK"></i>Hong Kong</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Hungary.html"><i class="flag flag-HU"></i>Hungary</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Iceland.html"><i class="flag flag-IS"></i>Iceland</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./India.html"><i class="flag flag-IN"></i>India</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Indonesia.html"><i class="flag flag-ID"></i>Indonesia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Ireland.html"><i class="flag flag-IE"></i>Ireland</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Israel.html"><i class="flag flag-IL"></i>Israel</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Italy.html"><i class="flag flag-IT"></i>Italy</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Japan.html"><i class="flag flag-JP"></i>Japan</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Kazakhstan.html"><i class="flag flag-KZ"></i>Kazakhstan</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Kenya.html"><i class="flag flag-KE"></i>Kenya</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Korea_South.html"><i class="flag flag-KR"></i>Korea (South)</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Latvia.html"><i class="flag flag-LV"></i>Latvia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Argentina.html"><i class="flag flag-AR"></i>Argentina</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Australia.html"><i class="flag flag-AU"></i>Australia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Austria.html"><i class="flag flag-AT"></i>Austria</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Azerbaijan.html"><i class="flag flag-AZ"></i>Azerbaijan</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Belarus.html"><i class="flag flag-BY"></i>Belarus</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Belgium.html"><i class="flag flag-BE"></i>Belgium</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Brazil.html"><i class="flag flag-BR"></i>Brazil</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Bulgaria.html"><i class="flag flag-BG"></i>Bulgaria</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Burkina_Faso.html"><i class="flag flag-BF"></i>Burkina Faso</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Canada.html"><i class="flag flag-CA"></i>Canada</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Chile.html"><i class="flag flag-CL"></i>Chile</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/China.html"><i class="flag flag-CN"></i>China</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Croatia.html"><i class="flag flag-HR"></i>Croatia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Czechia.html"><i class="flag flag-CZ"></i>Czechia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Denmark.html"><i class="flag flag-DK"></i>Denmark</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Dominican_Republic.html"><i class="flag flag-DO"></i>Dominican Republic</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Estonia.html"><i class="flag flag-EE"></i>Estonia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Finland.html"><i class="flag flag-FI"></i>Finland</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/France.html"><i class="flag flag-FR"></i>France</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Germany.html"><i class="flag flag-DE"></i>Germany</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Greece.html"><i class="flag flag-GR"></i>Greece</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Guernsey.html"><i class="flag flag-GG"></i>Guernsey</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Hong_Kong.html"><i class="flag flag-HK"></i>Hong Kong</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Hungary.html"><i class="flag flag-HU"></i>Hungary</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Iceland.html"><i class="flag flag-IS"></i>Iceland</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/India.html"><i class="flag flag-IN"></i>India</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Indonesia.html"><i class="flag flag-ID"></i>Indonesia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Ireland.html"><i class="flag flag-IE"></i>Ireland</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Israel.html"><i class="flag flag-IL"></i>Israel</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Italy.html"><i class="flag flag-IT"></i>Italy</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Japan.html"><i class="flag flag-JP"></i>Japan</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Kazakhstan.html"><i class="flag flag-KZ"></i>Kazakhstan</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Kenya.html"><i class="flag flag-KE"></i>Kenya</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Korea_South.html"><i class="flag flag-KR"></i>Korea (South)</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Latvia.html"><i class="flag flag-LV"></i>Latvia</a></li>
 						</ul>
 						<ul  class="nav flex-column">
-							<li class="nav-item"><a class="nav-link-cut" href="./Liechtenstein.html"><i class="flag flag-LI"></i>Liechtenstein</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Lithuania.html"><i class="flag flag-LT"></i>Lithuania</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Luxembourg.html"><i class="flag flag-LU"></i>Luxembourg</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Macao.html"><i class="flag flag-MO"></i>Macao</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Malawi.html"><i class="flag flag-MW"></i>Malawi</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Malaysia.html"><i class="flag flag-MY"></i>Malaysia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Mexico.html"><i class="flag flag-MX"></i>Mexico</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Moldova.html"><i class="flag flag-MD"></i>Moldova</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Morocco.html"><i class="flag flag-MA"></i>Morocco</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Netherlands.html"><i class="flag flag-NL"></i>Netherlands</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./New_Zealand.html"><i class="flag flag-NZ"></i>New Zealand</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Norway.html"><i class="flag flag-NO"></i>Norway</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Pakistan.html"><i class="flag flag-PK"></i>Pakistan</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Panama.html"><i class="flag flag-PA"></i>Panama</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Peru.html"><i class="flag flag-PE"></i>Peru</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Philippines.html"><i class="flag flag-PH"></i>Philippines</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Poland.html"><i class="flag flag-PL"></i>Poland</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Portugal.html"><i class="flag flag-PT"></i>Portugal</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Romania.html"><i class="flag flag-RO"></i>Romania</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Russia.html"><i class="flag flag-RU"></i>Russia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Serbia.html"><i class="flag flag-RS"></i>Serbia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Singapore.html"><i class="flag flag-SG"></i>Singapore</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Slovakia.html"><i class="flag flag-SK"></i>Slovakia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><i class="flag flag-SI"></i>Slovenia</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./South_Africa.html"><i class="flag flag-ZA"></i>South Africa</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Spain.html"><i class="flag flag-ES"></i>Spain</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Sweden.html"><i class="flag flag-SE"></i>Sweden</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Switzerland.html"><i class="flag flag-CH"></i>Switzerland</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Taiwan.html"><i class="flag flag-TW"></i>Taiwan</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Thailand.html"><i class="flag flag-TH"></i>Thailand</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Trinidad_and_Tobago.html"><i class="flag flag-TT"></i>Trinidad and Tobago</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Turkey.html"><i class="flag flag-TR"></i>Turkey</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./USA.html"><i class="flag flag-US"></i>U.S.A.</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Ukraine.html"><i class="flag flag-UA"></i>Ukraine</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./United_Kingdom.html"><i class="flag flag-GB"></i>United Kingdom</a></li>
-							<li class="nav-item"><a class="nav-link-cut" href="./Uzbekistan.html"><i class="flag flag-UZ"></i>Uzbekistan</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Liechtenstein.html"><i class="flag flag-LI"></i>Liechtenstein</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Lithuania.html"><i class="flag flag-LT"></i>Lithuania</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Luxembourg.html"><i class="flag flag-LU"></i>Luxembourg</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Macao.html"><i class="flag flag-MO"></i>Macao</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Malawi.html"><i class="flag flag-MW"></i>Malawi</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Malaysia.html"><i class="flag flag-MY"></i>Malaysia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Mexico.html"><i class="flag flag-MX"></i>Mexico</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Moldova.html"><i class="flag flag-MD"></i>Moldova</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Morocco.html"><i class="flag flag-MA"></i>Morocco</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Netherlands.html"><i class="flag flag-NL"></i>Netherlands</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/New_Zealand.html"><i class="flag flag-NZ"></i>New Zealand</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Norway.html"><i class="flag flag-NO"></i>Norway</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Pakistan.html"><i class="flag flag-PK"></i>Pakistan</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Panama.html"><i class="flag flag-PA"></i>Panama</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Peru.html"><i class="flag flag-PE"></i>Peru</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Philippines.html"><i class="flag flag-PH"></i>Philippines</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Poland.html"><i class="flag flag-PL"></i>Poland</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Portugal.html"><i class="flag flag-PT"></i>Portugal</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Romania.html"><i class="flag flag-RO"></i>Romania</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Russia.html"><i class="flag flag-RU"></i>Russia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Serbia.html"><i class="flag flag-RS"></i>Serbia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Singapore.html"><i class="flag flag-SG"></i>Singapore</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Slovakia.html"><i class="flag flag-SK"></i>Slovakia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Slovenia.html"><i class="flag flag-SI"></i>Slovenia</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/South_Africa.html"><i class="flag flag-ZA"></i>South Africa</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Spain.html"><i class="flag flag-ES"></i>Spain</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Sweden.html"><i class="flag flag-SE"></i>Sweden</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Switzerland.html"><i class="flag flag-CH"></i>Switzerland</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Taiwan.html"><i class="flag flag-TW"></i>Taiwan</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Thailand.html"><i class="flag flag-TH"></i>Thailand</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Trinidad_and_Tobago.html"><i class="flag flag-TT"></i>Trinidad and Tobago</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Turkey.html"><i class="flag flag-TR"></i>Turkey</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/USA.html"><i class="flag flag-US"></i>U.S.A.</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Ukraine.html"><i class="flag flag-UA"></i>Ukraine</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/United_Kingdom.html"><i class="flag flag-GB"></i>United Kingdom</a></li>
+							<li class="nav-item"><a class="nav-link-cut" href="./country/Uzbekistan.html"><i class="flag flag-UZ"></i>Uzbekistan</a></li>
 						</ul> 
 					</div>
 				</nav>
