--- a/country/Australia-3.html
+++ b/country/Australia-3.html
@@ -141,6 +141,24 @@
                     <div class="bottom-left">AU-655787</div>
                 </a>
             </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/australia/AU-739294.jpg" data-caption="Postcard AU-739294">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-739294.jpg" alt="Postcard AU-739294">
+                    <div class="bottom-left">AU-739294</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/australia/AU-739299.jpg" data-caption="Postcard AU-739299">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-739299.jpg" alt="Postcard AU-739299">
+                    <div class="bottom-left">AU-739299</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/australia/AU-778499.jpg" data-caption="Postcard AU-778499">
+                    <img class="img-fluid w-100" src="./../collect/australia/AU-778499.jpg" alt="Postcard AU-778499">
+                    <div class="bottom-left">AU-778499</div>
+                </a>
+            </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
