--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src=«gettext.js»></script>
+	<script src='gettext.js'></script>
     <title>Документ</title>
 </head>
 <body>
